--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ I've put these 21st Century super powers to good work, volunteering with NYCares
 			
 		</div> 
 		<div class="span4 columns">
-		  		 
-		  		  <br /><br />
+		  		 <h2><center>About Me</center></h2>
+<hr width="80%">
+		  		  <br />
 					  {% for post in site.posts %}	
 					  <h3> <center>
 					  {{ post.content }}</center> </h3><br />
