--- a/index.html
+++ b/index.html
@@ -10,20 +10,12 @@ title: "byKG"
 		</div>
 		<div class="span4 columns"><br />
 <h2><center>Kevin Gailey</center></h2>
-<hr width="80%">
-<p>A brief background of myself: Texan born and raised. I attended film school in NYC and am avid reader and traveler. I have been to 28 of the 50 US states, 5 countries and am always willing to plan another trip. I’m a digital native, growing up in a time of massive change, accustomed to troubleshooting and supporting others in their usage of technology. I love to combine technology and traveling.
-
-I've put these 21st Century super powers to good work, volunteering with NYCares to help out of work members of the community get comfortable interacting with computers. I have also worked with a diverse & expanding user base at Netflix. It’s enriching to help people and know your work contributes to their well being & enjoyment.</p>
-		 <br />
-<hr width="80%">
-			<h2><center>bio@kevingailey.com</center></h2>
-
-<br />
+<img src="/img/k.jpg" />
 				 
 		</div>		
 		
 		<div class="span4 columns">
-			<img src="/img/k.jpg" />
+			
 			
 		</div> 
 		<div class="span4 columns">
@@ -39,6 +31,6 @@ I've put these 21st Century super powers to good work, volunteering with NYCares
 		</div>		
 	</div>
 </div>
-		 <center> <h4>Thank you for stopping by! You can also <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B">verify</a> <a href="/key.asc">my identify</a> <a href="http://keybase.io/kevingailey">on keybase</a> </h4></center>
+		 <center> <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B">verify</a> <a href="/key.asc">my identify</a> <a href="http://keybase.io/kevingailey">on keybase</a> </h4></center>
 <br /><br />
-<footer> <center><span style="font-color: #e3e3e3;">by.KG All Rights Reserved Copyright 2017.</span></center></footer>
+<footer> <center><span style="font-color: #e3e3e3;">by.KG All Rights Reserved Copyright 2018.</span></center></footer>
