--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: "byKG"
 		</div>
 		<div class="span4 columns"><br />
 <h2><center>Kevin Gailey</center></h2>
-<img src="/img/k.jpg" />
+<img src="/img/fed.jpg" />
 				 
 		</div>		
 		
@@ -23,8 +23,7 @@ title: "byKG"
 <hr width="80%">
 		  		  <br />
 					  {% for post in site.posts %}	
-					  <h3> <center>
-					  {{ post.content }}</center> </h3><br />
+					 <center>{{ post.content }}</center><br />
 					  {% endfor %}
 				  
 				  <br /><br/><br/>
@@ -33,4 +32,4 @@ title: "byKG"
 </div>
 		 <center> <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B">verify</a> <a href="/key.asc">my identify</a> <a href="http://keybase.io/kevingailey">on keybase</a> </h4></center>
 <br /><br />
-<footer> <center><span style="font-color: #e3e3e3;">by.KG All Rights Reserved Copyright 2018.</span></center></footer>
+<footer> <center><span style="font-color: #e3e3e3;">All Rights Reserved by.KG Copyright 2018.</span></center></footer>
