--- a/index.html
+++ b/index.html
@@ -13,17 +13,10 @@ title: "byKG"
 <img src="/img/fed.jpg" />
 				 
 		</div>		
-		
-		<div class="span4 columns">
-			
-			
-		</div> 
-		<div class="span4 columns">
-		  		 <h2><center>About Me</center></h2>
-<hr width="80%">
+		<div class="span8 columns">
 		  		  <br />
 					  {% for post in site.posts %}	
-					 <center>{{ post.content }}</center><br />
+					 {{ post.content }}<br />
 					  {% endfor %}
 				  
 				  <br /><br/><br/>
