--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@ title: "byKG"
 		<div class="span4 columns"><br />
 <img src="/img/fed.jpg" />
 <h2><center>Kevin Gailey</center></h2>
-Hello and good day(: My name is Kevin but my friends call me KG.<br />
+<p> Hello and good day(: My name is Kevin but my friends call me KG.</p>
 <p>A brief background of myself: I attended film school in NYC. Taught myself web design and system adminstration. Am a advid reader and skateboarder. A digital native, growing up in a time of massive change, I'm accustomed to trouble shooting and supporting others in their usage of technology. I have put these 21st Century skills to good work, volunteering with NYC Cares to help older, out of work members of the community get accustom to interacting with computers. I met and helped train some amazing people to efficiently use computers in the workspace. It's enriching to help people and know your work contributes to their well being. </p>
 
-<p> I've worked with customers and the general public in many ways from selling clothing, installing appliances, to producing video content and designing web sites for clients. These skills and qualities of mine, mixed with numerous experiences, make me uniquely qualified. I have had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over phone, thru e-mail or face to face. Having happy, satisified customers is the key to success. Great customer service and support serves as an invaluable form of marketing. Making customers happy, knowing you're supporting a tool people depend on, is a reward in itself. It's great to feel needed!	</p>			 
+<p> I've worked with customers and the general public in many ways from selling clothing, installing appliances, to producing video content and designing web sites for clients. These skills and qualities of mine, mixed with numerous experiences, make me uniquely qualified. I have had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over phone, thru e-mail or face to face. Having happy, satisified customers is the key to success. Great customer service and support serves as an invaluable form of marketing. Making customers happy, knowing you're supporting a tool people depend on, is a reward in itself. It's great to feel needed!	</p><br /><br/><br/>
+
+<center> <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">verify</a> <a href="/key.asc" alt="My Key.asc">my identify</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on keybase</a> </h4></center>			 
 		</div>		
 		<div class="span8 columns">
 		  		  <br />
@@ -26,6 +28,5 @@ Hello and good day(: My name is Kevin but my friends call me KG.<br />
 		</div>		
 	</div>
 </div>
-		 <center> <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B">verify</a> <a href="/key.asc">my identify</a> <a href="http://keybase.io/kevingailey">on keybase</a> </h4></center>
 <br /><br />
 <footer> <center><span style="font-color: #e3e3e3;">All Rights Reserved by.KG Copyright 2018.</span></center></footer>
