--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: layout
 title: "byKG"
 ---
-
+<h1>Photography by.KG</h1>
 <div class="content">	  
 	<div class="row">		
 		<div class="span4 columns">
