--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: "by.KG"
 <p> Hello and good day(: My name is Kevin but my friends call me KG.</p>
 <p>A brief background of myself: I attended film school in NYC. Taught myself web design and system adminstration. Am a advid reader and skateboarder. A digital native, growing up in a time of massive change, I'm accustomed to trouble shooting and supporting others in their usage of technology. </p>
 
-<p> I've worked with customers and the general public in many ways from selling clothing, installing appliances, to producing video content and designing web sites for clients. These skills and qualities of mine, mixed with numerous experiences, make me uniquely qualified. I have had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over phone, thru e-mail or face to face. Having happy, satisified customers is the key to success. Great customer service and support serves as an invaluable form of marketing. Making customers happy, knowing you're supporting a tool people depend on, is a reward in itself. It's great to feel needed!</p><br />
+<p> I've worked with customers and the general public in many ways from selling clothing, installing appliances, to producing video content and designing web sites for clients. These skills and qualities of mine, mixed with numerous experiences, make me uniquely qualified. I have had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over phone, thru e-mail or face to face. Having happy, satisified customers is the key to success. Great customer service and support serves as an invaluable form of marketing. Making customers happy, knowing you're supporting a tool people depend on, is a reward in itself. It's great to feel needed!</p>
 
 <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">verify</a> <a href="/key.asc" alt="My Key.asc">my identify</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on keybase</a> </h4>		 
 		</div>		
@@ -28,8 +28,7 @@ title: "by.KG"
 					
 					<br />
 					  {% endfor %}
-				  
-				  <br /><br/><br/>
+				  <br/>
 		</div>		
 	</div>
 </div>
