--- a/index.html
+++ b/index.html
@@ -30,4 +30,4 @@ title: "by.KG"
 	</div>
 </div>
 <br /><br />
-<footer> <center><span style="font-color: #e3e3e3;">All Rights Reserved by.KG Copyright 2018.</span></center></footer>
+<footer> <center><span style="font-color: #e3e3e3;">All Rights Reserved by.KG Copyright 2018. Make America Dope Again</span></center></footer>
