--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: "by.KG"
 
 <p> I've worked with customers and the general public in many ways, from selling clothing, installing appliances, to producing video content and designing web sites for clients. These skills and qualities of mine, mixed with numerous experiences, make me uniquely qualified. I've had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over the phone, thru e-mail or face to face. Having happy, satisified customers is the key to success. Great customer service and support serves as an invaluable form of marketing. Making customers happy, knowing you're supporting people is a reward in itself. It's great to feel needed!</p>
 
-<h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">verify</a> <a href="/key.asc" alt="My Key.asc">my identify</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on keybase</a> </h4>		 
+<h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">crytographically verify</a> <a href="/key.asc" alt="My Key.asc">my identity</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on line</a> and <a href="mailto:photog@kevingailey.com">hire me</a> </h4>		 
 		</div>		
 		<div class="span8 columns">
 		  		  <br />
