--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@ title: "by.KG"
 <img src="/img/fed.jpg" />
 <h2><center>Kevin Gailey</center></h2>
 <p> Hello and good day(: My name is Kevin but my friends call me KG.</p>
-<p>A brief background of myself: I attended film school in NYC. Taught myself web design and system adminstration. Am a advid reader and skateboarder. A digital native, growing up in a time of massive change, I'm accustomed to trouble shooting and supporting others in their usage of technology. </p>
+<p>A brief background of myself: I attended film school in NYC. Taught myself web design and system adminstration. Am a avid reader and explorer. A digital native, growing up in a time of massive change. </p>
 
-<p> I've worked with customers and the general public in many ways, from selling clothing, installing appliances, to producing video content and designing web sites for clients. These skills and qualities of mine, mixed with numerous experiences, make me uniquely qualified. I've had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over the phone, thru e-mail or face to face. Having happy, satisified customers is the key to success. Great customer service and support serves as an invaluable form of marketing. Making customers happy, knowing you're supporting people is a reward in itself. It's great to feel needed!</p>
+<p> I've worked with customers and the general public in many ways, from selling clothing, installing appliances, to producing video content and designing web sites for clients. I've had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over the phone, thru e-mail and face to face. Having happy, satisified customers is the key to success.</p>
+
+<p> Currently I support a Top 10 Productivity app in the App Store. I'm an intimate part of a small team delivering top notch email and chat support. I also take alot of time to practice the photography skills I've learned in school and out. Living in Denver provides great opportunities to take some stunning photos of landscape, people, animals and cityscape.</p>
 
 <h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">crytographically verify</a> <a href="/key.asc" alt="My Key.asc">my identity</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on line</a> and <a href="mailto:photog@kevingailey.com">hire me</a> </h4>		 
 		</div>		
