--- a/index.html
+++ b/index.html
@@ -6,16 +6,7 @@ title: "by.KG"
 <div class="content">	  
 	<div class="row">		
 		<div class="span4 columns"><br />
-<img src="/img/fed.jpg" />
-<h2><center>Kevin Gailey</center></h2>
-<p> Hello and good day(: My name is Kevin but my friends call me KG.</p>
-<p>A brief background of myself: I attended film school in NYC. Taught myself web design and system adminstration. Am a avid reader and explorer. A digital native, growing up in a time of massive change. </p>
-
-<p> I've worked with customers and the general public in many ways, from selling clothing, installing appliances, to producing video content and designing web sites for clients. I've had to manage customers expectations, communicate with them in a clear and concise way and provide an overall great experience over the phone, thru e-mail and face to face. Having happy, satisified customers is the key to success.</p>
-
-<p> Currently I support a Top 10 Productivity app in the App Store. I'm an intimate part of a small team delivering top notch email and chat support. I also take alot of time to practice the photography skills I've learned in school and out. Living in Denver provides great opportunities to take some stunning photos of landscape, people, animals and cityscape.</p>
-
-<h4>You can  <a href="https://pgp.mit.edu/pks/lookup?op=get&search=0xA2258D8CFE0DC15B" alt="MIT PGP LOOK UP">crytographically verify</a> <a href="/key.asc" alt="My Key.asc">my identity</a> <a href="http://keybase.io/kevingailey" alt="Kevin Gailey on Keybase">on line</a> and <a href="mailto:photog@kevingailey.com">hire me</a> </h4>		 
+{% include bio.html %}	 
 		</div>		
 		<div class="span8 columns">
 		  		  <br />
@@ -24,12 +15,9 @@ title: "by.KG"
 					<a href="{{ post.url }}"><img height="350" width="350" src="{{ post.picA2 }}" /></a>
 					<a href="{{ post.url }}"><img height="350" width="350" src="{{ post.picA3 }}" /></a>
 					<a href="{{ post.url }}"><img height="350" width="350" src="{{ post.picA4 }}" /></a>
-					
-					<br />
 					  {% endfor %}
 				  <br/>
 		</div>		
 	</div>
 </div>
-<br /><br />
-<footer> <center><span style="font-color: #e3e3e3;">All Rights Reserved by.KG Copyright 2018. Make America Dope Again</span></center></footer>
+
