--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: layout
-title: "by.KG"
+title: Photography by.KG
 ---
-<h1>Photography by.KG</h1>
+<h1>{% title %}</h1>
 <div class="content">	  
 	<div class="row">		
 		<div class="span4 columns"><br />
