--- a/resume/index.html
+++ b/resume/index.html
@@ -94,7 +94,7 @@
 <hr width="45%" />
 <h4>Education &amp; Volunteering</h4><a id="edu"></a>
 <p><b>New York Film Academy</b>, <i>Jan 2010 to May 2012</i></p>
-<p><b>Denver Resue Mission</b>, <i>2019 to Present</i></p>
+<p><b>Denver Rescue Mission</b>, <i>2019 to Present</i></p>
 <p><b>NYCares</b>, <i>2010 to 2012</i></p>
 </body>
 </html>
