--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Kevin Gailey 2020 Resume</title>
+<head><title>Kevin Gailey Resume 2020 - by.KG - by.kevingailey.com</title>
 <style>
 	body {
 	    background: #1B1B25;
@@ -27,10 +27,10 @@
 </head>
 <body>
 <h1><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEDCFLTNPegMw/profile-displayphoto-shrink_400_400/0?e=1596672000&v=beta&t=hkXz9Y_asr7QwIPe5qEo0hCoDerN8wZ5QY-xj7oiBno" width="120" height="120" /> &nbsp; Kevin Gailey - <br /> Photographer. Tinkerer. Leader.
-<div class="social"><a href="/Resume-2020.pdf">Download My Full Resume</a><br />Contact: <a href="https://www.linkedin.com/in/kg8/">LinkedIn</a>, <a href="mailto:resume@kevingailey.com">Email</a><br /> Cell: (903)948-8511 <br /> 
+<div class="social"><a href="/Resume-2020.pdf">Download My Full Resume</a><br />Contact: <a href="https://www.linkedin.com/in/kg8/">LinkedIn</a>, <a href="mailto:resume@kevingailey.com">Email</a><br /> Cell: (903) 948-8511 <br /> 
 </div> </h1>
 <div id="jump">Jump to: <a href="#skills">Skills</a>,<a href="#hobbies">Hobbies &amp; Interest</a>,<a href="#work">Work Experience</a>,<a href="#edu">Education &amp; Volunteering</a></div>
-<p class="bio">Hello and Good Day,<br /><br />  &emsp; &emsp; My name is Kevin, but my friends call my KG. Thank you for taking a look at my resume. A brief background of myself: Texan born and raised. I attended film school across the country in NYC before I finally settled in Denver CO. I have taught myself web design and system administration and continue my learning at every turn. I am an avid reader and tinkerer, lately hacking together IoT devices and administering my own home server. As a digital native, growing up in a time of massive change, I'm accustomed to troubleshooting, investigating and solving issues with technology in an empathetic way. 
+<p class="bio">Hello &amp; Good Day,<br /><br />  &emsp; &emsp; My name is Kevin, but my friends call my KG. Thank you for taking a look at my resume. A brief background of myself: Texan born and raised. I attended film school across the country in NYC before I finally settled in Denver CO. I have taught myself web design and system administration and continue my learning at every turn. I am an avid reader and tinkerer, lately hacking together IoT devices and administering my own home server. As a digital native, growing up in a time of massive change, I'm accustomed to troubleshooting, investigating and solving issues with technology in an empathetic way. 
 <br /> &nbsp; <br /> &emsp; &emsp; I have put these 21st Century super powers to good work, <a href="https://www.newyorkcares.org">volunteering with NYCares</a> to help members of the community get comfortable interacting with computers. I currently use my powers for help in supporting and product quality testing of a top InsureTech SaaS.<br /></p>
 <p id="kg">- KG.</p>
 <hr width="45%" /><a id="skills"></a>
