--- a/resume/index.html
+++ b/resume/index.html
@@ -23,6 +23,7 @@
 	a:hover { color: black;}
 	li { font-size: 18px; padding-bottom: 8px;}
 	#kg { text-align: right; font-size: 22px; padding-right: 5px;}
+	img { border-radius: 15px;}
 </style>
 </head>
 <body>
