Config job description

--- a/resume.html
+++ b/resume.html
@@ -47,15 +47,11 @@
   <tr><th><h4>Experience</h4></th></tr>
   <tr>
     <td>NextGear Solutions - 2019 to Present</td> 
-    <td>With NextGear I support a top InsureTech SaaS brand. I use my communication skills to explain complicated and complex applications in simple and relatable language to users and developers alike. I lead sales demonstrations and training sessions via Zoom for new Contractor users. I was able to drive our response time to potential customers from 3 days to 6 hours. I have worked on numerous Quality Assurance projects including: Writing Unit Tests for multiple products including new unreleased apps, beta testing new features and writing technical documentation.</td>
+    <td>As a Configuration Analyst I am responsible for configuring our highly customizable SAAS platforms to meet client needs. The objective is to configure programs, based on client standards and expectations, so the platform delivers ROI and value. I achieved this by leveraging analytical and deductive problem-solving skills to write rule-based equations that address a variety of situations and scenarios.</td>
   </tr>
   <tr>
     <td>24-7 Intouch - 2016 to 2019</td> 
     <td>At 24-7 Intouch I lead a support team for a Global VPN SaaS brand. We began as a small team delivering email and chat. Ultimately we drove Email response time under 1 hour, launched the first coordinated Social Media support channel for the brand and grew the support team from 5 members locally to 30 memebers in 2 countries. I was the ultimate support escalation for issues. I would regularly use TeamViewer remote desktop to troubleshoot with the user when our typical troubleshooting steps did not solve their issue.</td>
-  </tr>
-  <tr>
-    <td>ODES UTVS - 2016</td> 
-    <td>At Odes I managed the team responsible for inventory, shipping and receiving, as well as catching up a back log of over 500 shipments. I lead the team responsible for moving the warehouse across country. We were able to set up the new warehouse while also achieving the business goal of same day shipping for qualifying orders.</td>
   </tr>
   <tr>
     <td>Lowes Inc - 2013 to 2016</td> 
