--- a/resume.html
+++ b/resume.html
@@ -77,20 +77,11 @@
     <td>Home Theater/Entertainment</td>
   </tr>
   <tr>
-    <td>Jeeps & Off-roading</td>
-    <td>Jeep Mods</td> 
-    <td>Having A 2nd Vehicle for When The Jeep Isnt Running</td>
-  </tr>
-  <tr>
+    <td>Jeeps, Mods & Off-roading</td>
     <td>New York Yankee Baseball</td>
     <td>Tennesee Titans Football</td> 
-    <td>Brooklyn Nets Basketball</td>
   </tr>
 </table>
 <hr width="45%" />
-<h4>Education &amp; Volunteering</h4><a id="edu"></a>
-<p><b>New York Film Academy</b>, <i>Jan 2010 to May 2012</i></p>
-<p><b>Denver Resue Mission</b>, <i>2019 to Present</i></p>
-<p><b>NYCares</b>, <i>2010 to 2012</i></p>
 </body>
 </html>
