--- a/resume/index.html
+++ b/resume/index.html
@@ -48,8 +48,8 @@
 <table id="worktable">
   <tr><th><h4>Experience</h4></th></tr>
   <tr>
-    <td>NextGear Solutions - 2019 to Present</td> 
-    <td>With NextGear I support a top InsureTech SaaS brand. I use my communication skills to explain complicated and complex applications in simple and relatable language to users and developers alike. I lead sales demonstrations and training sessions via Zoom for new Contractor users. I was able to drive our response time to potential customers from 3 days to 6 hours. I have worked on numerous Quality Assurance projects including: Writing Unit Tests for multiple products including new unreleased apps, beta testing new features and writing technical documentation.</td>
+    <td>CoreLogic - 2019 to Present</td> 
+    <td>With CoreLogic I support a top InsureTech SaaS brand. I use my communication skills to explain complicated and complex applications in simple and relatable language to users and developers alike. I lead sales demonstrations and training sessions via Zoom for new Contractor users. I was able to drive our response time to potential customers from 3 days to 6 hours. I have worked on numerous Quality Assurance projects including: Writing Unit Tests for multiple products including new unreleased apps, beta testing new features and writing technical documentation.</td>
   </tr>
   <tr>
     <td>24-7 Intouch - 2016 to 2019</td> 
